--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   </head>
   <body>
-    <div class="mt-20 mx-44">
-        <div class="h-24 text-xl bg-gradient-to-r from-sky-500 to-indigo-500 text-white flex justify-center items-center font-bold">
+    <div class="mt-20 mx-44 flex flex-wrap border-2 rounded">
+        <div class="w-full h-24 text-xl bg-gradient-to-r from-sky-500 to-indigo-500 text-white flex justify-center items-center font-bold rounded">
             News You can Trust!
         </div>
-        <div class="text-center mt-6">
-            <h3>Stay up to Date with the latest!</h3>
+        <div class="text-center mt-6 w-full">
+            <h3 class="text-lg font-semibold">Stay up to Date with the latest!</h3>
             <p>Subscribe to our newsletter for the latest news straight into your inbox.</p>
-            <form>
-                <input placeholder="your@gmail.com">
-                <button>Subscribe Now</button>
+            <form class="flex flex-wrap">
+                <input placeholder="your@gmail.com" class="w-full mx-52 bg-slate-200 text-center placeholder:text-sm mt-4 mb-4 py-2 rounded">
+                <button class="bg-blue-500 w-full text-white mt-4 mb-4 mx-52 rounded-full">Subscribe Now</button>
             </form>
-            <p class="my-6">We value your privacy.</p>
+            <p class="mt-6 mb-4 text-sm">We value your privacy.</p>
         </div>
 
         
